<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Food-journal</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Scan With Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="tesco_button">"Tesco"</string>
    <string name="sainsburys_button">"Sainsbury's"</string>
    <string name="name">name:</string>
    <string name="ingredients_go_here">Ingredients go here..</string>
    <string name="history">HISTORY</string>
    <string name="product_name">Product Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_history_activity">HistoryActivityActivity</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="saturates">Sats</string>
    <string name="carbohydrate">Carbs</string>
    <string name="sugar">Sugar</string>
    <string name="fibre">Fibre</string>
    <string name="protein">Prot</string>
    <string name="salt">Salt</string>
    <string name="add_to_basket">SAVE BASKET</string>
    <string name="recommended_days">Days:</string>
    <string name="_0">0</string>
    <string name="placeHolderMain">-</string>
    <string name="new_item">NEW ITEM</string>
    <string name="peopleLabel">People:</string>
    <string name="_1">1</string>
    <string name="date">date</string>
    <string name="date_value">Date:</string>
    <string name="error">ERROR</string>
    <string name="people">Add/Remove People</string>
    <string name="title_activity_basket">BasketActivity</string>
</resources>