<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/barcode_header"
        android:id="@+id/status_message"
        android:layout_alignParentRight="true"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/barcode_value"
        android:layout_below="@+id/status_message"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="110dp"
        android:layout_alignRight="@+id/status_message" />

    <Button
        android:id="@+id/read_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/tesco_button"/>

    <Button
        android:id="@+id/read_barcode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/read_barcode"
        android:layout_alignBottom="@+id/read_barcode"
        android:layout_alignParentStart="true"
        android:text="@string/sainsburys_button"/>

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/read_barcode"
        android:layout_alignBottom="@+id/read_barcode"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/use_flash"
        android:text="@string/history"/>

    <Switch
        android:id="@+id/auto_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/historyButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:checked="false"
        android:text="@string/auto_focus"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:id="@+id/use_flash"
        android:layout_alignTop="@+id/auto_focus"
        android:layout_alignRight="@+id/barcode_value"
        android:checked="false" />

    <TextView
        android:text="No Product Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productName"
        android:layout_below="@+id/status_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="no ingredients yet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredients"
        android:layout_below="@+id/status_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"/>
</RelativeLayout>
