<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/energyHeader"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/energy"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fatHeader"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/fat"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/saturatesHeader"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/saturates"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/carbHeader"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/carbohydrate"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/sugarHeader"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/sugar"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fibreHeader"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/fibre"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/proteinHeader"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/protein"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/saltHeader"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/salt"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/energyValue"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/energy"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fatValue"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/fat"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/saturatesValue"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/saturates"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/carbValue"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/carbohydrate"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/sugarValue"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/sugar"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fibreValue"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/fibre"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/proteinValue"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/protein"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/saltValue"
            android:layout_width="@dimen/nutrient_header_width"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:text="@string/salt"
            android:textAlignment="center"/>

    </LinearLayout>
</LinearLayout>