<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:id="@+id/grid"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="8">

    <TextView
        android:id="@+id/energyHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:text="@string/energy"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/fatHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:text="@string/fat"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/saturatesHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:text="@string/saturates"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/carbHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:text="@string/carbohydrate"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/sugarHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:text="@string/sugar"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/fibreHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:text="@string/fibre"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/proteinHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="6"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:text="@string/protein"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/saltHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="7"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:text="@string/salt"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/energyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/energy"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/fatValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:text="@string/fat"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/saturatesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:text="@string/saturates"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/carbValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:text="@string/carbohydrate"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/sugarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:text="@string/sugar"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/fibreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:text="@string/fibre"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/proteinValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="6"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:text="@string/protein"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/saltValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="7"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:text="@string/salt"
        android:textAlignment="center"/>
</GridLayout>