<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/rel"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="70dp">
    <TextView
        android:id="@+id/daysLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/recommended_days"/>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/daysLabel"
        android:columnCount="8"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="78dp">

        <TextView
            android:id="@+id/energyHeader"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:text="@string/energy"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fatHeader"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:text="@string/fat"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/saturatesHeader"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:text="@string/saturates"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/carbHeader"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:text="@string/carbohydrate"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/sugarHeader"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:text="@string/sugar"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fibreHeader"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:text="@string/fibre"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/proteinHeader"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_column="6"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:text="@string/protein"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/saltHeader"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_column="7"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:text="@string/salt"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/energyValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:text="@string/energy"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fatValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:text="@string/fat"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/saturatesValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:text="@string/saturates"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/carbValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:text="@string/carbohydrate"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/sugarValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:text="@string/sugar"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fibreValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:text="@string/fibre"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/proteinValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="6"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:text="@string/protein"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/saltValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="7"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:text="@string/salt"
            android:textAlignment="center"/>
    </GridLayout>

    <TextView
        android:id="@+id/daysValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/daysLabel"
        android:text="@string/_0"/>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/grid"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"/>
</RelativeLayout>